--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.a768a91f.js"></script><link href="/static/css/main.3edc37e7.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/><link rel="icon" href="/manageactivity/favicon.ico"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
+        <meta name="description" content="Web site created using create-react-app"/>
+        <link rel="apple-touch-icon" href="/manageactivity/logo192.png"/>
+        <link rel="manifest" href="/manageactivity/manifest.json"/>
+        <title>Manage Activities</title>
+        <script defer="defer" src="/manageactivity/static/js/main.251223ef.js"></script>
+        <link href="/manageactivity/static/css/main.e0720557.css" rel="stylesheet">
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
+    </html>
