--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"/><link rel="icon" href="/manageactivity/favicon.ico"/>
+        <meta charset="utf-8"/><link rel="icon" href="/jewellerydemo/favicon.ico"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <meta name="description" content="Web site created using create-react-app"/>
-        <link rel="apple-touch-icon" href="/manageactivity/logo192.png"/>
-        <link rel="manifest" href="/manageactivity/manifest.json"/>
+        <link rel="apple-touch-icon" href="/jewellerydemo/logo192.png"/>
+        <link rel="manifest" href="/jewellerydemo/manifest.json"/>
         <title>Manage Activities</title>
-        <script defer="defer" src="/manageactivity/static/js/main.251223ef.js"></script>
-        <link href="/manageactivity/static/css/main.e0720557.css" rel="stylesheet">
+        <script defer="defer" src="/jewellerydemo/static/js/main.251223ef.js"></script>
+        <link href="/jewellerydemo/static/css/main.e0720557.css" rel="stylesheet">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
