--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="/jewellerydemo/logo192.png"/>
         <link rel="manifest" href="/jewellerydemo/manifest.json"/>
-        <title>Manage Activities</title>
+        <title>Jewellery shop portal demo1</title>
         <script defer="defer" src="/jewellerydemo/static/js/main.a768a91f.js"></script>
         <link href="/jewellerydemo/static/css/main.3edc37e7.css" rel="stylesheet">
     </head>
